--- a/helm/templates/backend-deployment.yaml
+++ b/helm/templates/backend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: {{ .Values.backend.image }}
+          image: "{{ .Values.backend.image.repo }}:{{ .Values.frontend.image.tag }}"
           ports:
             - containerPort: 50051
           imagePullPolicy: Always
