--- a/helm/templates/frontend-deployment.yaml
+++ b/helm/templates/frontend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: {{ .Values.frontend.image }}
+          image: "{{ .Values.frontend.image.repo }}:{{ .Values.frontend.image.tag }}"
           ports:
             - containerPort: 5000
           imagePullPolicy: Always
