Restore values.yaml

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,1 +1,8 @@
-@@
+frontend:
+  image:
+    repo: xkingrd/simetrik-frontend
+    tag: hello
+backend:
+  image:
+    repo: xkingrd/simetrik-backend
+    tag: hello
