Move the order in the buildspec.yml file

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -41,10 +41,11 @@ phases:
       - echo "Updating the repo"
       - git config --global user.email "codebuild@example.com"
       - git config --global user.name "CodeBuild"
+      - git remote set-url origin https://$GITHUB_TOKEN@github.com/rancesking/Challenge-sm.git
+      - git branch main
       - git add helm/values.yaml
       - git commit -m "Update image tag to $DOCKER_TAG"
       - git tag -a $DOCKER_TAG -m "Release $DOCKER_TAG"
-      - git remote set-url origin https://$GITHUB_TOKEN@github.com/rancesking/Challenge-sm.git
       - git push origin main
       - echo "CD completed on $(date)"
 
