--- a/buildspec.yml
+++ b/buildspec.yml
@@ -42,7 +42,7 @@ phases:
       - git config --global user.email "codebuild@example.com"
       - git config --global user.name "CodeBuild"
       - git remote set-url origin https://$GITHUB_TOKEN@github.com/rancesking/Challenge-sm.git
-      - git branch main
+      - git checkout main
       - git add helm/values.yaml
       - git commit -m "Update image tag to $DOCKER_TAG"
       - git tag -a $DOCKER_TAG -m "Release $DOCKER_TAG"
